--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,6 @@ a {
 
 /* COMMON */
 
-* {
-    margin: 0 auto;
-    text-align: center;
-}
-
 ul {
     display: flex;
 }
@@ -28,9 +23,12 @@ ul {
 
 section {
     padding: 3rem 0;
+    margin: 0 auto;
+    text-align: center;
 }
 
-section:nth-of-type(2n + 1) {
+section:nth-of-type(2n + 1),
+footer {
     background-color: #1abc9b;
     color: white;
 }
@@ -48,6 +46,8 @@ header {
     background-color: #2c3f4f;
     display: flex;
     align-items: center;
+    color: white;
+    font-weight: 700;
 }
 
 header li {
@@ -84,6 +84,7 @@ padding: 1rem 0;
     text-align: center;
 }
 
+
 .img-container {
     background-color:#0f38b5;
 }
@@ -99,6 +100,27 @@ padding: 1rem 0;
 
 
 /* FOOTER */
+
+footer {
+    text-align: center;
+}
+
+.top-footer {
+    background-color:#3a546e;
+}
+
+.tf-left,
+.tf-center,
+.tf-right {
+    padding: 2rem;
+}
+
+.bottom-footer {
+    background-color: #2c3f4f;
+    height: 80px;
+    line-height: 80px;
+}
+
 
 
 /* END FOOTER */
