--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,12 @@ h1 {
 }
 
 .img-container {
-    width: 100%;
+    
     border-radius: 20px;
+}
+
+.img-container img {
+    width: 100%;
 }
 
 /* About Me */
