--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,10 @@ section {
     max-width: 1170px;
 }
 
-
 .p-top2 {
     padding-top: 2rem;
 }
+
 /* Utilities */
 
 section.bg-green {
@@ -71,6 +71,9 @@ textarea.form-control {
     font-size: 1.5rem;
 }
 
+.form-control:focus {
+    box-shadow: none;
+}
 /* END COMMON */
 
 /* HEADER */
